# Runeform_POC_3

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml  railway.toml  server.py
runeform/: brand.py  compose.py  data_shape.py  fonts.py  models.py  photos.py  pipeline.py  ranking.py  render.py  scoring.py  templates.py  typography.py  upscale.py
tests/: conftest.py  test_e2e.py
